--- a/home.html
+++ b/home.html
@@ -4,12 +4,21 @@
 <head>
     <meta charset="utf-8">
     <title>Home Page</title>
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-    <h1>Hola</h1>
-    <script src="main.js"></script>
+    <h1>Smooth Scroll</h1>
+
+    <div class="main" id="section1">
+        <h2>Section 1</h2>
+        <a href="#section2">Click Me to Smooth Scroll to Section 2 Below</a>
+    </div>
+
+    <div class="main" id="section2">
+        <h2>Section 2</h2>
+        <a href="#section1">Click Me to Smooth Scroll to Section 1 Above</a>
+    </div>
 </body>
 
 </html>
