Change active button and url when scroll is manual

--- a/home.html
+++ b/home.html
@@ -8,30 +8,33 @@
     </head>
 
 <body>
-    <div class="header">
+    <div id="header" class="header">
         <h1>Fusiona Test</h1>
     </div>
 
     <div class="navbar-space">
         <div id="navbar"> 
-            <a onclick="setURL();" href=" #id1 " class="navbar-item active"> VPN Satelitales </a> 
+            <a href=" #id1 " class="navbar-item active"> VPN Satelitales </a> 
             <a href=" #id2 " class="navbar-item"> IsatPhone Pro </a>
             <a href=" #id3 " class="navbar-item"> BGAN </a> 
         </div>
     </div>
 
-
-    <div class="section" id="id1">
-        <h2>Section 1</h2>
+    <div id="content">
+        <div class="section" id="id1">
+            <h2>Section 1</h2>
+        </div>
+    
+        <div class="section" id="id2">
+            <h2>Section 2</h2>
+        </div>
+    
+        <div class="section" id="id3">
+            <h2>Section 3</h2>
+        </div>
     </div>
 
-    <div class="section" id="id2">
-        <h2>Section 2</h2>
-    </div>
 
-    <div class="section" id="id3">
-        <h2>Section 3</h2>
-    </div>
 
     <script src="main.js"></script>
 </body>
